--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A burger logger with MySQL, Node, Express, Handlebars, and a homemade ORM (yum!). Node and MySQL queries and routes data, and Handlebars generates the HTML.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
